feat: audio extraction controller
